--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -20,10 +20,17 @@ jobs:
           node-version: '20'
           cache: 'npm'
           
-      - name: Install Dependencies
+      - name: Clean Install Dependencies
         run: |
-          npm ci
-          cd functions && npm ci
+          # Limpiar caché y módulos
+          rm -rf node_modules
+          rm -rf functions/node_modules
+          rm -f package-lock.json
+          rm -f functions/package-lock.json
+          
+          # Instalar dependencias
+          npm install
+          cd functions && npm install
           
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
